networkpolicy/network-policy/network-policy-deny/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: demo-namespace
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
