networkpolicy/network-policy/network-policy-deny/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: demo-namespace
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
